Add binding between Rust and JS

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["Florian Reisecker florian.reisecker@gmail.com"]
 
 [dependencies]
 yew = { git = "https://github.com/DenisKolodin/yew"}
+stdweb = "*"
